--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -55,7 +55,7 @@ html {
       color: #fff;
       text-align: center;
       text-decoration: none;
-      &:hover {color: #3e405b;}
+      &:hover {color: #000;}
     }
   
   }
@@ -73,3 +73,4 @@ html {
       color: #fff;
     }
   }
+
